Edits to theory and definitions

--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -1,9 +1,9 @@
 ## 2. Theory and definitions
 
-### 2.1 A mathematical definition of the problem
+### 2.1 A mathematical definition of the problem of fragmenting molecules for QC torsion drives
 
-A molecular structure can be modeled as a degree bounded graph $G = (V, E)$ where $V$ are the nodes and $E$ are the edges.
-In a molecular graph, the nodes correspond to the atoms and the bonds correspond to the edges.
+A molecular structure can be modeled as a degree-bounded graph $G = (V, E)$, where $V$ are the nodes and $E$ are the edges.
+In a molecular graph, the nodes correspond to atoms and edges correspond to covalent bonds.
 We define rotatable bonds as a set bonds in the molecule that are not in rings, $\mathcal{E} \subset E$, and $\mathcal{G}$ as a set
 of allowable subgraphs, where each subgraph $G'(V', E') \in \mathcal{G}$ is built around a central, rotatable bond, $e' \in \mathcal{E}$
 with the following conditions:
@@ -13,45 +13,38 @@ with the following conditions:
 * All $v \in V$ adjacent to $e$
 * If $v \in V'$ is in a ring in $G$, the ring should be included in $G'$
 
-The weights on $e'$ are given by $\delta(e'; G')$ where $\delta$ is the RMSE of the torsion potential around the central, rotatable bond in
-the full graph vs. a subgraph. Since $\delta(e'; G')$ is computationally expensive, we use a surrogate, $\gamma(e'; G')$, which we
-define as the difference of the WBO on the central, rotatable bond $e'$ in $G'$ and in the full graph $G$.
-In order to calculate the WBO, we need to cap open valences. The rule we use are defined in section 3.4.
+The weights on $e'$ are given by $\delta(e'; G')$, where $\delta$ is the RMSE of the torsion potential around the central, rotatable bond in the full graph $G$ compared to the subgraph $G'$.
+Since $\delta(e'; G')$ is computationally expensive to evaluate, we use a surrogate, $\gamma(e'; G')$, which we define as the difference of the WBO on the central, rotatable bond $e'$ in $G'$ and in the full graph $G$.
+In order to calculate the WBO, we need to "cap" open valences by adding additional atoms to ensure the resulting molecule is not a radical.
+The rule we use are defined in Section 3.4.
 
-We want to minimize $\gamma(e'; G')$, while also minimizing the cost of each subgraph. We define the cost as estimated in Figure @fig:b3lyp_scaling
+We want to minimize $\gamma(e'; G')$, while also minimizing the cost of each subgraph.
+We define the cost as estimated in Figure @fig:b3lyp_scaling
 
 $$ c(G') \propto (|V'|)^{2.6} $$
 
-Which leads to minimizing
+which leads to minimizing
 
 $$ \sum_{e' \in \mathcal{E}} |\gamma(e';  G') + c(G'; e')|$$
 
-The search space of $\mathcal G$ for each rotatable bond is combinatorial and its upper bound is ${|V|\choose{4}} + {|V|\choose{5}} + ... {|V|\choose{|V|}}$
-since all $G' \in \mathcal G$ need to be connected and rings are not fragmented. To reduce the search space, we also define a list
-of functional groups that should not be fragmented in @tbl:fgroups.
+The search space of $\mathcal G$ for each rotatable bond is combinatorial, and its upper bound is ${|V|\choose{4}} + {|V|\choose{5}} + ... {|V|\choose{|V|}}$ since all $G' \in \mathcal G$ need to be connected and rings are not fragmented.
+To reduce the search space, we also define a list of functional groups that should not be fragmented in @tbl:fgroups.
 
-Given how large the search space can become, we use several heuristics as described in section 3.4.
+Given how large the search space can become, we use several heuristics, described in Section 3.4.
 
 ### 2.2 Physical definitions
 
-In most MM force fields, torsions are defined by the four atoms involved in a torsion. However,
-the torsion energy function (or profile) of a bond is determined by a combination of local and non-local effects from conjugation,
-hyperconjugation, sterics and electrostatics
-[@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d]. For this study
-we define local as atoms within two bonds of the central bond of a torsion and remote as any atom
-beyond those two bonds.
+In most MM force fields, torsions are defined by the four sequentially-bonded atoms involved in a torsion.
+However, the torsion energy function (or profile) of a bond is determined by a combination of local and non-local effects from conjugation, hyperconjugation, sterics, and electrostatics [@doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.7b00645; @doi:10.1038/35079036; @doi:10.1021/jp046290d].
+In this study, we define _local atoms_ as those within two bonds of the central bond of a torsion, and _remote atoms_ as any atom beyond those two bonds.
 
-Sterics and elecrostatics are in principle handled by non bonded terms in most force fields, so a torsion profile would ideally
-represent conjugation or hyperconjugation, and only the 1-4 electrostatics. Using small fragments to generate QC torsion profiles
-reduces non-local electrostatics and steric interactions from convoluting the data. However, conjugation and
-hyperconjugation are non local properties and remote chemical changes can influence the extent of conjugation and / or hyperconjugation.
-In this study, we aim to mitigate the effects of remote chemical changes on conjugation and hyperconjugation by understanding how
-the strength of the central bond changes with remote chemical changes. Here we define conjugation and hyperconjugation and how we use these
-terms in this paper.
+Steric and elecrostatic interactions are, in principle, accounted for by non bonded terms in most force fields, so a torsion profile would ideally primarily capture conjugation or hyperconjugation effects, and only the 1-4 electrostatics.
+Using small fragments to generate QC torsion profiles reduces non-local electrostatics and steric interactions from convoluting the data. However, conjugation and hyperconjugation are non local properties and remote chemical changes can influence the extent of conjugation and/or hyperconjugation.
+In this study, we aim to avoid removing remote chemical substituents that impact the torsion of interest via conjugation and hyperconjugation by first understanding how the strength of the central bond is altered by remote chemical modifications.
+Below, we give a more precise definition to _conjugation_ and _hyperconjugation_ and how we use these terms in this paper.
 
-Conjugation and hyperconjugation describes the sharing of electron density across several bonds.
-Conjugation is formally defined as the overlap of p-orbital electrons across $\sigma$ bonds [@doi:10.1002/jlac.18993060107; @url:https://goldbook.iupac.org/terms/view/C01267] such as what occurs in
-benzene or butadiene. Hyperconjugation is the interactions of electrons in a donating bonding orbital to an anti-bonding orbital [@doi:10.1021/ja01846a008].
-There are several modes of hyperconjugation such as $\sigma \to \sigma^*$, $\sigma \to \pi^*$, and $\pi \to \sigma^*$. In this study, for simplicity,
-we use the term conjugation to refer to all modes of conjugation and hyperconjugation.
-
+Conjugation and hyperconjugation describe the sharing of electron density across several bonds.
+Conjugation is formally defined as the overlap of p-orbital electrons across $\sigma$ bonds [@doi:10.1002/jlac.18993060107; @url:https://goldbook.iupac.org/terms/view/C01267], such as what occurs in benzene or butadiene.
+Hyperconjugation is the interaction of electrons in a donating bonding orbital to an anti-bonding orbital [@doi:10.1021/ja01846a008].
+There are several modes of hyperconjugation such as $\sigma \to \sigma^*$, $\sigma \to \pi^*$, and $\pi \to \sigma^*$.
+In this study, for simplicity, we use the term conjugation to refer to all modes of conjugation and hyperconjugation.
