--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -2,54 +2,47 @@
 
 ### 4.1 Combinatorial fragmentation benchmark set contains rich, chemical information that can be useful for other applications
 
-The validation set used to benchmark our fragmentation scheme, and determine the disruption threshold to use, was specifically
-selected to validate a fragmentation scheme for QC torsion scan so we wanted molecules that are challenging to fragment.
-Therefor, the hundred molecules chosen include bonds that are sensitive to remote
-chemical changes and the functional groups they are sensitive to exhibited relatively large, long range effects. However, these molecules
-were filtered out from a larger set with a total of 1,234 molecules and ~300,000 fragments with their WBO distributions over conformations.
-This exhaustive fragmentation dataset, with their changing WBO distributions, provides a treasure trove of nuanced chemical data. For the purposes
-of this paper, we did not delve into interesting effects we observed because it is out of scope. Here we describe
-some of those observations, and provide some thoughts on how this kind of data can be useful for other applications.
+{`JDC: This paragraph is a bit of a mess---can you fix?`}{.red}
+The validation set used to benchmark our fragmentation scheme, and determine the disruption threshold to use, was specifically selected to validate a fragmentation scheme for QC torsion scans.
+Aiming to identify molecules that are challenging to fragment, we selected a set of 100 molecules that included bonds sensitive to removal of remote functional groups.
+These molecules were selected from a larger set of 1,234 molecules and ~300,000 fragments with their WBO distributions over conformations.
+This exhaustive fragmentation dataset, with their changing WBO distributions, provides a treasure trove of nuanced chemical data.
+For the purposes of this paper, we did not delve into interesting effects we observed because it is out of scope.
+Here we describe some of those observations, and provide some thoughts on how this kind of data can be useful for other applications.
 
-At closer proximities that was not relevant for this study, and when functional groups are fragmented,
-the changes in the distributions detect varied effects. Many of these effects confirmed known considerations, such as removing
-a carbonyl from an amide or carboxylic group. But some were more subtle, such as changes observed vis-à-vis primary, secondary,
-and tertiary amines. The changes seem to pick up on subtle pKa changes for different amines [@doi:10.1002/cmdc.200700059]. In addition, the
-shifts in the distributions observed in Figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfonamide.
-`should I add more figures on the kind of things I saw? SI?`{.orange}
+At closer proximities that were not relevant for this study, and when functional groups are fragmented, the changes in the distributions detect varied effects.
+Many of these effects confirmed known considerations, such as removing a carbonyl from an amide or carboxylic group.
+But some were more subtle, such as changes observed vis-à-vis primary, secondary, and tertiary amines.
+The changes seem to pick up on subtle pKa changes for different amines [@doi:10.1002/cmdc.200700059].
+In addition, the shifts in the distributions observed in Figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfonamide. {`CS:should I add more figures on the kind of things I saw? SI?`}{.orange} {`JDC: Yes, if possible!`}{.red}
 
 This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
-defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (Figure @fig:hammett),
-and shifts in distributions also seem to detect pKa shifts, WBOs may be useful in improving pKa predictions.
+defined locally and might not detect long range effects.
+In addition, since WBO is anti-correlated with Hammett resonance parameters (Figure @fig:hammett), and shifts in distributions also seem to detect pKa shifts, WBOs may be useful in improving pKa predictions.
 
-We are sharing the dataset as a benchmark set for future fragmentation schemes. It is also straight forward to generate such data for molecules
-that are not in the set by following the directions given in the detailed methods.
+We are sharing the dataset as a benchmark set for future fragmentation schemes. {`JDC: Where?`}{.red}
+It is also straightforward to generate such data for molecules that are not in the set by following the directions given in the Detailed Methods. {`JDC: Which part?`}{.red}
 
 ### 4.2 Bond orders can be used to fit force field parameters
 
-WBO is one form of quantum mechanical electron density based bond order calculations, among many other definitions of bond orders (Pauling [@doi:10.1021/ja01315a105],
-Coulson [@doi:10.1098/rspa.1939.0006], Mulliken [@doi:10.1063/1.1740588]
-Mayer [@doi:10/b5m8r5], Jug, [@doi:10.1021/ja00466a009], Politzer  [@doi:10.1063/1.1671457], atomic overlap matrix bond order [@doi:10.1021/ja00011a014],
-natural resonance theory bond order [@doi:10/bcrs8w],
-Nalewajksi-Mrozek bond order [@doi:10.1002/qua.560510403], effective bond order [@doi:10.1002/anie.200603600],
-natural localized molecular orbital bond order [@doi:10.1021/ja00160a022], delocalization index [@doi:10.1021/ja00859a001], fuzzy bond order
-[@doi:10.1016/j.cplett.2003.11.048]) that aim to quantify the chemical bond, a key concept in chemistry, by computing the electron population overlap between atoms. These quantities
-attempt to provide a link between the physical understanding of molecules, a system of individual particles without explicit bonds, to the powerful, mental, graphical, models
-that chemists employ when thinking about molecules. Given that these quantities try to make that connection, it is not surprising that fractional bond orders
-captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
-MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional
-force constants. Given the relationship we find in Figure @fig:substituted_phenyls, C and D, we should be able to extrapolate or interpolate torsion force constants by calculating
-the WBO, thus avoiding running expensive QC torsion scans. The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
-EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
-The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In Figure @fig:substituted_phenyls, C and D, the lines
-seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
-these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
-many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
+THe WBO is just one form of quantum mechanical electron density based bond order calculations that aims to quantify the chemical bond, a key concept in chemistry, by computing the electron population overlap between atoms.
+Many other definitions have been proposed; a non-exhaustive list includes Pauling [@doi:10.1021/ja01315a105], Coulson [@doi:10.1098/rspa.1939.0006], Mulliken [@doi:10.1063/1.1740588], Mayer [@doi:10/b5m8r5], Jug [@doi:10.1021/ja00466a009], Politzer  [@doi:10.1063/1.1671457], atomic overlap matrix bond order [@doi:10.1021/ja00011a014],
+natural resonance theory bond order [@doi:10/bcrs8w], Nalewajksi-Mrozek bond order [@doi:10.1002/qua.560510403], effective bond order [@doi:10.1002/anie.200603600], natural localized molecular orbital bond order [@doi:10.1021/ja00160a022], delocalization index [@doi:10.1021/ja00859a001], and fuzzy bond order [@doi:10.1016/j.cplett.2003.11.048].
 
-In addition, the ELF10 WBO can potentially be useful to determine bond order rather than relying on cheminformatics definitions.
-This could be a useful prescreen before running expensive, hard to converge QC torsion scans for a bond having a WBO indicating a very high torsion energy barrier.  
+These quantities attempt to provide a link between the physical understanding of molecules, a system of individual particles without explicit bonds, to the powerful, mental, graphical, models that chemists employ when thinking about molecules.
+Given that these quantities try to make that connection, it is not surprising that fractional bond orders captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504], MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional force constants.
+Given the relationship we find in Figure @fig:substituted_phenyls, C and D, we should be able to extrapolate or interpolate torsion force constants by calculating the WBO, thus avoiding running expensive QC torsion scans.
 
-### 4.3 Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
+The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
+EHT {`JDC: What is EHT?`}{.red} electronic populations with the Open Force Field toolkit [@url:https://github.com/openforcefield/openforcefield].
+The SMIRNOFF format {`citation needed`}{.red} provides a convenient way to add appropriate torsion terms given the data we have.
+For example, In Figure @fig:substituted_phenyls, C and D, the lines seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in these clusters and interpolate the torsion force constants for the different chemical environments of those patterns.
+This has the potential to avoid many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
+
+In addition, the ELF10 WBO {`citation needed`}{.red} can potentially be useful to determine bond order rather than relying on cheminformatics definitions.
+This could be a useful prescreen before running expensive, difficult-to-converge QC torsion scans for a bond having a WBO indicating a very high torsion energy barrier.  
+
+### 4.3 Relative changes in WBO are insufficient to capture all characteristics of QC torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so a relative change is a good indication of
 conjugation and therefor a surrogate for torsion barrier heights (Figure @fig:substituted_phenyls, C and D). However, as we have shown in
@@ -57,67 +50,51 @@ Figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for th
 environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
 Symmetry around zero can be lost, either `with the minima and maxima shifting, or when one maxima is higher than the
-corresponding maxima across the symmetry line at zero degrees : What does this mean? Do you simply mean when the local environment is chiral?`{.orange} [Hold for SI]. In these cases, corresponding WBO scans have the same features
-as the QC scans. This indicates that the changes in the profiles correspond to electronic changes in the different torsions.
-All scans that exhibit these kind of changes have torsions types that include trivalent nitrogen which can be either in
-planar or pyrmidal conformations. When we measured the improper angle of the nitrogen involved in the torsion scan, along the scan,
-we found that the scans that were shifted relative to most other scans in the series, had improper angles that were pyrmidal
-throughout the scan. The other molecules in the series all had improper angles that became planar at lower energies to allow
-conjugation [Hold for SI]. A trivalent nitrogen will be pyramidal if the lone pair is not conjugated, and the scans that
-have improper angles along the entire QC scan all fall on the lower end of WBOs within the series which indicates that the
-lone pairs are not conjugated with the phenyl ring. Another interesting observation is that in most cases where the nitrogen
-is pyramidal throughout the scan, its chirality stays the same, however, for the scans where the relative barrier heights
-are not symmetric, the chirality of the nitrogen flips during the scan [Hold for SI].
+corresponding maxima across the symmetry line at zero degrees : What does this mean? Do you simply mean when the local environment is chiral?`{.orange} {[Hold for SI]}{.red}.
 
-Another way QC torsion scan profiles can change besides scale, are when the
-the relative heights of the minima or maxima are different or new minima or maxima are observed. Urea in Figure
-@fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~ [hold for SI]
-exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
-other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
-Furthermore, when their corresponding improper angles (when relevant) were measured, we found that all of them become planar
-at low energy which imply that all molecules in the series are conjugated along the phenyl ring and X~1~. Here, steric interactions
-cause the changes in QC profiles. In all scans where one minima relative to the other minima in the scan is higher, and this is not
-the case for other scans in the series, a bulky group is at the meta position, while the other scans have X~2~ at para positions.
-In addition, for other scans where the profiles do not change as much and X~1~ is not as bulky, but the barrier heights are out of order of increasing ELF10 WBO (a lower
-ELF10 WBO has a higher torsion energy barrier than another molecule with a higher ELF10 WBO in the series), X~2~ is at the
-meta position.
+In these cases, corresponding WBO scans have the same features as the QC scans.
+This indicates that the changes in the profiles correspond to electronic changes in the different torsions.
+All scans that exhibit these kind of changes have torsions types that include trivalent nitrogen which can be either in planar or pyrmidal conformations.
+When we measured the improper angle of the nitrogen involved in the torsion scan, along the scan, we found that the scans that were shifted relative to most other scans in the series, had improper angles that were pyrmidal throughout the scan.
+The other molecules in the series all had improper angles that became planar at lower energies to allow conjugation {`[Hold for SI]`}{.red}.
+A trivalent nitrogen will be pyramidal if the lone pair is not conjugated, and the scans that have improper angles along the entire QC scan all fall on the lower end of WBOs within the series which indicates that the lone pairs are not conjugated with the phenyl ring. Another interesting observation is that in most cases where the nitrogen is pyramidal throughout the scan, its chirality stays the same, however, for the scans where the relative barrier heights are not symmetric, the chirality of the nitrogen flips during the scan {`[Hold for SI]`}{.red}.
 
-The torsion parameters in forcefields are supposed to include both conjugation, a through-bond electron delocalisation phenomenon that is not well modeled
-in classical forcefields, and corrections for 1-4 nonbonded interactions. To increase transferability of torsion parameters, torsion parameters
-should not include non bonded interactions beyond the 1-4 atoms. However, in general, it is difficult to separate the contributions
-of sterics and conjugation in a QC torsion scan. Here, it seems like the WBO of conformers along the torsion scans(?What?)`{.orange}, and relative ELF10 WBOs can
-provide a way to separate these contributions. If a torsion profile changes relative to another torsion profile of the same torsion type,
-and their WBO scans along the torsion profile only change in scale,
-or if their relative barrier heights are not in the same order as their ELF10 WBO estimate, the changes are probably coming from nonbonded
-interactions beyond the 1-4 atoms. However, if changes in QC torsion scans of the same torsion types are accompanied with the same profile changes in
-the corresponding WBO scan, then the profile change is inherent to the electron population overlap of the bond and might need a different torsion type.
+Another way QC torsion scan profiles can change besides scale are when the relative heights of the minima or maxima are different or new minima or maxima are observed.
+Urea in Figure @fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~ {`[hold for SI]`}{.red} exhibit similar changes.
+In these cases, the correspond WBO scans do not have these features, but have similar profiles to other WBO scans in the series.
+This indicates that the observed changes in the profiles do not implicate changes in conjugation.
+Furthermore, when their corresponding improper angles (when relevant) were measured, we found that all of them become planar at low energy which imply that all molecules in the series are conjugated along the phenyl ring and X~1~.
+Here, steric interactions cause the changes in QC profiles.
+In all scans where one minima relative to the other minima in the scan is higher, and this is not the case for other scans in the series, a bulky group is at the meta position, while the other scans have X~2~ at para positions.
+In addition, for other scans where the profiles do not change as much and X~1~ is not as bulky, but the barrier heights are out of order of increasing ELF10 WBO (a lower ELF10 WBO has a higher torsion energy barrier than another molecule with a higher ELF10 WBO in the series), X~2~ is at the meta position.
 
-### 4.4 Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
+The torsion parameters in forcefields are supposed to include both conjugation, a through-bond electron delocalization phenomenon that is not well modeled in classical forcefields, and corrections for 1-4 nonbonded interactions.
+To increase transferability of torsion parameters, torsion parameters should not include non bonded interactions beyond the 1-4 atoms. However, in general, it is difficult to separate the contributions of sterics and conjugation in a QC torsion scan.
+Here, it seems like the WBO of conformers along the torsion scans(?What?)`{.orange}, and relative ELF10 WBOs can provide a way to separate these contributions. If a torsion profile changes relative to another torsion profile of the same torsion type,
+and their WBO scans along the torsion profile only change in scale, or if their relative barrier heights are not in the same order as their ELF10 WBO estimate, the changes are probably coming from nonbonded interactions beyond the 1-4 atoms.
+However, if changes in QC torsion scans of the same torsion types are accompanied with the same profile changes in the corresponding WBO scan, then the profile change is inherent to the electron population overlap of the bond and might need a different torsion type.
 
-Relative changes in bond orders between the fragments and their parent molecules, are a good indication of changes to the electron density
-around a central bond. QC torsion scans capture both steric and conjugation effects so torsion force field parameters should capture
-both short range non bonded corrections and conjugation. However, simple fragmentation rules assumes that including 1-5 atoms around the central
-bond (including rings and functional groups) is enough to capture conjugation effects in addition to sterics. While this assumption holds
-true for many molecules, it is not sufficient for sensitive bonds and functional groups that have long range effects, as we have shown.
-Therefor, using the WBO to detect changes to a bond's chemical environment, which is sensitive to nonlocal effects, ameliorates some deficiencies
-in rule based fragmentation schemes. But there is a trade off and the solution is not always optimal. While WBO calculations are
-cheap relative to QC torsion scans, they still require several semi-empirical QM calculations, the ELF10 estimate is sometimes
-not an adequate estimate, and heuristics used to add substituents to minimize electron density disruption do not always find the optimal path.
+### 4.4 Using Bond orders when fragmenting molecules captures long-range effects that simple rules do not
 
-One way to speed up conjugation perception, is using RDKit's conjugation detector which relies on rules. However,
-these rules are binary; a bond is either considered fully conjugated or not. However, Conjugation is a continuous property and
-the extent of conjugation determines relative barrier heights. Boolean values do not allow us to detect such relative changes
-to a bond's chemical environment that will effect torsion barrier height. A better approach is to extend the concept of
-H-TEQ (hyperconjugation for torsional energy quantification) developed in
+Relative changes in bond orders between the fragments and their parent molecules, are a good indication of changes to the electron density around a central bond.
+QC torsion scans capture both steric and conjugation effects so torsion force field parameters should capture both short range non bonded corrections and conjugation. However, simple fragmentation rules assumes that including 1-5 atoms around the central bond (including rings and functional groups) is enough to capture conjugation effects in addition to sterics.
+While this assumption holds true for many molecules, it is not sufficient for sensitive bonds and functional groups that have long range effects, as we have shown.
+Therefore, using the WBO to detect changes to a bond's chemical environment, which is sensitive to nonlocal effects, ameliorates some deficiencies in rule based fragmentation schemes. But there is a trade off and the solution is not always optimal. While WBO calculations are cheap relative to QC torsion scans, they still require several semi-empirical QM calculations, the ELF10 estimate is sometimes not an adequate estimate, and heuristics used to add substituents to minimize electron density disruption do not always find the optimal path.
+
+One way to speed up conjugation perception, is using RDKit's conjugation detector which relies on rules.
+However, these rules are binary; a bond is either considered fully conjugated or not.
+However, conjugation is a continuous property and the extent of conjugation determines relative barrier heights.
+Boolean values do not allow us to detect such relative changes to a bond's chemical environment that will effect torsion barrier height. A better approach is to extend the concept of H-TEQ (hyperconjugation for torsional energy quantification) developed in
 [@doi:10.1021/acs.jcim.7b00645, @doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.9b00581] to include not just the 1-4 atoms in
 bonds adjacent to conjugated systems, or aromatic rings in biaryls, but other atoms in the molecule to obtain V~1~ and V~2~ estimates,
 and use those values instead of WBOs to determine the disruption of electron population overlap around the bond.
 
 However, both of the above solutions, while reducing the cost of extent of conjugation detection, will still rely on needing
-to find the optimal path to grow our the fragment. A data-driven approach, which can find the optimal fragment is the ideal solution.
-The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg bond orders for all conformations. Given the
-sheer number of data available on QCArchive, and the long range information WBOs captures, it will be possible to train an
-ML model to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
-the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmenting and also potentially
-find the most optimal fragment that minimizes both electronic density disruption and fragment size. It can also provide data
-needed to determine how many torsion SMIRKS types are needed for maximum transferability and chemical coverage.
+to find the optimal path to grow our the fragment.
+{`JDC: Lots and lots of howevers here.`}{.red}
+A data-driven approach, which can find the optimal fragment is the ideal solution.
+The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg bond orders for all conformations.
+Given the
+sheer number of data available on QCArchive, and the long range information WBOs captures, it should be possible to train an ML model to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce the parent molecule chemical environment.
+This data-driven approach will reduce the cost of fragmenting and also potentially find the most optimal fragment that minimizes both electronic density disruption and fragment size.
+It can also provide data needed to determine how many torsion SMIRKS types are needed for maximum transferability and chemical coverage.
