--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -1,5 +1,7 @@
 ## 5. Detailed method
 
+{`JDC: Detailed Methods go after the Conclusion.`}{.red}
+
 ### 5.1 QCArchive data generation and archiving
 The MolSSI [@doi:10.1063/1.5052551] QCArchive project is a platform for computing, organizing, and sharing quantum chemistry data.
 Computations with this platform automatically record all input and output quantities ensuring the reproducibility of all computations envolved.
@@ -158,4 +160,3 @@ the shortest path heuristic preformed better, or found more optimal fragments wh
 Currently, `fragmenter` depends on OpenEye to provides three modes of fragmentation described here. In the future, `fragmenter`
 will be incorporated into the `openforcefield` toolkit and will have the option to use RDKit [@url:http://www.rdkit.org/],
 an open source cheminformatic libraries. However, given that RDKit supports EHT instead of AM1, the fragments might be different.
-
